--- a/lessonadmin.html
+++ b/lessonadmin.html
@@ -228,7 +228,69 @@
     /* Make selects consistent in builder */
     .inlineRow{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
     .inlineRow .field{ flex:1; min-width: 160px; }
-  </style>
+  
+    /* Right add dock */
+    .addDock{
+      position: fixed;
+      right: 14px;
+      top: 118px;
+      z-index: 90;
+      width: 270px;
+      padding: 12px;
+      border-radius: 18px;
+      background: rgba(0,0,0,0.30);
+      border: 1px solid rgba(255,255,255,0.16);
+      backdrop-filter: blur(12px);
+      box-shadow: 0 18px 50px rgba(0,0,0,0.22);
+      display:flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .addDockTitle{
+      font-weight: 900;
+      font-size: 12px;
+      letter-spacing: .2px;
+      opacity: .92;
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 10px;
+    }
+    .dockGrid{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 8px;
+    }
+    .dockBtn{
+      display:inline-flex; align-items:center; justify-content:center; gap:10px;
+      padding: 10px 12px; border-radius: 999px; font-weight: 900;
+      cursor:pointer; border: 1px solid rgba(255,255,255,0.18);
+      background: rgba(255,255,255,0.10); color:#fff;
+      white-space: nowrap;
+      transition: transform .12s ease, filter .12s ease;
+      user-select:none;
+    }
+    .dockBtn:hover{ transform: translateY(-2px); filter: brightness(1.05); }
+    .dockBtn.yellow{ background: rgba(252, 209, 22, 0.95); border-color: rgba(252, 209, 22, 0.7); color: var(--ink); }
+    .dockBtn.blue{ background: rgba(0, 56, 147, 0.55); border-color: rgba(255,255,255,0.18); }
+    .dockSelect{ width:100%; padding: 10px 12px; border-radius: 14px; border: 1px solid rgba(255,255,255,0.18);
+      background: rgba(255,255,255,0.10); color:#fff; font-weight: 900; outline:none; }
+    .dockSelect option{ color: #0b1b3f; }
+    .dockDivider{ height:1px; background: rgba(255,255,255,0.14); margin: 6px 0; }
+    @media (max-width: 980px){
+      .addDock{ width: 240px; }
+    }
+    @media (max-width: 860px){
+      .addDock{
+        left: 12px;
+        right: 12px;
+        top: auto;
+        bottom: 12px;
+        width: auto;
+      }
+      .dockGrid{ grid-template-columns: 1fr 1fr 1fr; }
+    }
+</style>
 </head>
 
 <body>
@@ -241,6 +303,7 @@
         <div class="name">AquiVivo</div>
       </div>
       <div class="nav-actions">
+        <button class="btn btn-yellow" id="btnPublish" type="button">🚀 Publicar</button>
         <a class="btn" id="btnBackCourse" href="#">⬅️ Curso</a>
         <a class="btn btn-yellow" id="btnOpenLesson" href="#">📖 Ver lección</a>
         <a class="btn" id="btnOpenExercises" href="#">🧩 Admin ejercicios</a>
@@ -300,15 +363,6 @@
           <div class="field" style="grid-column: 1 / -1;">
             <div class="sectionTitle" style="margin-top:6px;">✨ Constructor por bloques (recomendado)</div>
             <div class="builderTop">
-              <div class="builderBtns">
-                <button class="miniBtn" id="btnAddHeading" type="button">➕ Título</button>
-                <button class="miniBtn" id="btnAddText" type="button">➕ Texto</button>
-                <button class="miniBtn" id="btnAddImage" type="button">➕ Imagen</button>
-                <button class="miniBtn" id="btnAddTip" type="button">➕ Tip</button>
-                <button class="miniBtn" id="btnAddExample" type="button">➕ Ejemplo</button>
-                <button class="miniBtn" id="btnAddDivider" type="button">➕ Separador</button>
-              </div>
-
               <div class="builderBtns">
                 <button class="miniBtn yellow" id="btnTplGrammar" type="button">📚 Plantilla: Gramática</button>
                 <button class="miniBtn yellow" id="btnTplVocab" type="button">🧠 Plantilla: Vocabulario</button>
@@ -424,6 +478,11 @@
     const btnAddExample = $("btnAddExample");
     const btnAddDivider = $("btnAddDivider");
 
+    const defaultTextColor = $("defaultTextColor");
+    const defaultTextSize = $("defaultTextSize");
+    const defaultBlockBg = $("defaultBlockBg");
+
+
     const btnTplGrammar = $("btnTplGrammar");
     const btnTplVocab = $("btnTplVocab");
     const btnTplPremium = $("btnTplPremium");
@@ -502,14 +561,24 @@
       return "#ffffff";
     }
 
+    function bgToCss(bg){
+      if(bg === "white") return "rgba(255,255,255,0.10)";
+      if(bg === "yellow") return "rgba(252,209,22,0.14)";
+      if(bg === "blue") return "rgba(0,56,147,0.18)";
+      if(bg === "red") return "rgba(206,17,38,0.14)";
+      return "";
+    }
+
     function sizeToCss(s){
+      if(s === "xs") return "12px";
       if(s === "sm") return "13px";
       if(s === "lg") return "18px";
+      if(s === "xl") return "20px";
       return "15px";
     }
 
     function newBlock(kind){
-      const base = { id: uid(), kind, color: "muted", size: "md", align: "left" };
+      const base = { id: uid(), kind, color: "muted", size: "md", align: "left", bg: "none" };
       if(kind === "heading") return { ...base, text: "Nuevo título", level: "h2", color: "yellow" };
       if(kind === "text") return { ...base, text: "Escribe aquí el texto…" };
       if(kind === "image") return { ...base, url: "", caption: "", width: "full" };
@@ -542,13 +611,27 @@
         if(b.kind === "heading"){
           const lvl = (b.level === "h3" ? "h3" : "h2");
           const text = escapeHtml(b.text || "");
-          out.push(`<${lvl} style="margin: 18px 0 10px; text-align:${align}; color:${color};">${text}</${lvl}>`);
+          const bg = bgToCss(b.bg);
+          if(bg){
+            out.push(`<div style="margin: 12px 0; padding: 14px 14px; border-radius: 16px; background:${bg}; border:1px solid rgba(255,255,255,0.14);">
+              <${lvl} style="margin: 0; text-align:${align}; color:${color};">${text}</${lvl}>
+            </div>`);
+          }else{
+            out.push(`<${lvl} style="margin: 18px 0 10px; text-align:${align}; color:${color};">${text}</${lvl}>`);
+          }
           continue;
         }
 
         if(b.kind === "text"){
           const text = escapeHtml(b.text || "").replaceAll("\n","<br>");
-          out.push(`<div style="margin: 10px 0; text-align:${align}; color:${color}; font-size:${fontSize}; line-height:1.65;">${text}</div>`);
+          const bg = bgToCss(b.bg);
+          if(bg){
+            out.push(`<div style="margin: 12px 0; padding: 14px 14px; border-radius: 16px; background:${bg}; border:1px solid rgba(255,255,255,0.14); text-align:${align};">
+              <div style="color:${color}; font-size:${fontSize}; line-height:1.65; text-align:${align};">${text}</div>
+            </div>`);
+          }else{
+            out.push(`<div style="margin: 10px 0; text-align:${align}; color:${color}; font-size:${fontSize}; line-height:1.65;">${text}</div>`);
+          }
           continue;
         }
 
@@ -557,10 +640,18 @@
           if(url){
             const safe = escapeHtml(url);
             const maxW = (b.width === "narrow" ? "780px" : "100%");
-            out.push(`<div style="margin: 14px 0; text-align:${align};">
-              <img src="${safe}" alt="" style="max-width:${maxW}; width:100%; border-radius: 18px; border: 1px solid rgba(255,255,255,0.14); display:block; margin: 0 auto;" />
-              ${b.caption ? `<div style="margin-top:8px; font-size:12px; opacity:0.86;">${escapeHtml(b.caption)}</div>` : ""}
-            </div>`);
+            const bg = bgToCss(b.bg);
+            if(bg){
+              out.push(`<div style="margin: 12px 0; padding: 14px 14px; border-radius: 16px; background:${bg}; border:1px solid rgba(255,255,255,0.14); text-align:${align};">
+                <img src="${safe}" alt="" style="max-width:${maxW}; width:100%; border-radius: 18px; border: 1px solid rgba(255,255,255,0.14); display:block; margin: 0 auto;" />
+                ${b.caption ? `<div style="margin-top:8px; font-size:12px; opacity:0.86;">${escapeHtml(b.caption)}</div>` : ""}
+              </div>`);
+            }else{
+              out.push(`<div style="margin: 14px 0; text-align:${align};">
+                <img src="${safe}" alt="" style="max-width:${maxW}; width:100%; border-radius: 18px; border: 1px solid rgba(255,255,255,0.14); display:block; margin: 0 auto;" />
+                ${b.caption ? `<div style="margin-top:8px; font-size:12px; opacity:0.86;">${escapeHtml(b.caption)}</div>` : ""}
+              </div>`);
+            }
           }
           continue;
         }
@@ -648,9 +739,11 @@
             <div class="field">
               <label>Tamaño</label>
               <select class="select" data-k="size">
-                <option value="sm">Pequeño</option>
-                <option value="md">Normal</option>
-                <option value="lg">Grande</option>
+                <option value="xs">XS</option>
+                <option value="sm">S</option>
+                <option value="md">M</option>
+                <option value="lg">L</option>
+                <option value="xl">XL</option>
               </select>
             </div>
             <div class="field">
@@ -661,7 +754,18 @@
                 <option value="right">Derecha</option>
               </select>
             </div>
+            <div class="field">
+              <label>Fondo del bloque</label>
+              <select class="select" data-k="bg">
+                <option value="none">Sin fondo</option>
+                <option value="white">Blanco</option>
+                <option value="yellow">Amarillo</option>
+                <option value="blue">Azul</option>
+                <option value="red">Rojo</option>
+              </select>
+            </div>
           `;
+
           body.appendChild(common);
 
           const selColor = common.querySelector('[data-k="color"]');
@@ -809,7 +913,17 @@
     }
 
     function addBlock(kind){
-      BLOCKS.push(newBlock(kind));
+      const b = newBlock(kind);
+      // apply defaults from right dock to new blocks (only where it makes sense)
+      try{
+        const dc = (defaultTextColor && defaultTextColor.value) ? defaultTextColor.value : null;
+        const ds = (defaultTextSize && defaultTextSize.value) ? defaultTextSize.value : null;
+        const dbg = (defaultBlockBg && defaultBlockBg.value) ? defaultBlockBg.value : null;
+        if(dc && (b.kind === "text" || b.kind === "heading" || b.kind === "image")) b.color = dc;
+        if(ds && (b.kind === "text" || b.kind === "heading" || b.kind === "image")) b.size = ds;
+        if(dbg && (b.kind === "text" || b.kind === "heading" || b.kind === "image")) b.bg = dbg;
+      }catch(e){}
+      BLOCKS.push(b);
       renderBlocks();
       syncHtmlFromBlocks();
     }
@@ -953,7 +1067,20 @@
     btnLoad.addEventListener("click", async ()=>{
       try{ await loadDoc(); showToast("Recargado", "toast-warn"); }catch(e){ console.error(e); showToast("Error al recargar.", "toast-bad"); }
     });
-    btnSave.addEventListener("click", async ()=>{
+    
+    const btnPublish = document.getElementById("btnPublish");
+    btnPublish?.addEventListener("click", async ()=>{
+      try{
+        publishedToggle.value = "true";
+        await saveDoc();
+        showToast("Lección publicada 🚀", "toast-ok");
+      }catch(e){
+        console.error(e);
+        showToast("Error al publicar.", "toast-bad");
+      }
+    });
+
+btnSave.addEventListener("click", async ()=>{
       try{ await saveDoc(); }catch(e){ console.error(e); showToast("Error al guardar.", "toast-bad"); }
     });
     htmlArea.addEventListener("input", ()=>{ try{ renderPreview(); }catch(e){} });
@@ -1021,5 +1148,53 @@
       try{ await loadDoc(); }catch(e){ console.error(e); showToast("Error cargando doc.", "toast-bad"); }
     });
   </script>
+
+  <!-- Right dock: add blocks + defaults -->
+  <div class="addDock" id="addDock">
+    <div class="addDockTitle">➕ Añadir bloque <span style="opacity:.75;">(siempre visible)</span></div>
+
+    <div class="dockGrid">
+      <button class="dockBtn" id="btnAddHeading" type="button">➕ Título</button>
+      <button class="dockBtn" id="btnAddText" type="button">➕ Texto</button>
+      <button class="dockBtn" id="btnAddImage" type="button">➕ Imagen</button>
+      <button class="dockBtn" id="btnAddTip" type="button">➕ Tip</button>
+      <button class="dockBtn" id="btnAddExample" type="button">➕ Ejemplo</button>
+      <button class="dockBtn" id="btnAddDivider" type="button">➕ Separador</button>
+    </div>
+
+    <div class="dockDivider"></div>
+    <div class="addDockTitle">🎨 Estilo por defecto</div>
+
+    <label style="font-weight:900; font-size:12px; opacity:.9;">Color de texto</label>
+    <select class="dockSelect" id="defaultTextColor">
+      <option value="muted">Blanco / por defecto</option>
+      <option value="yellow">Amarillo</option>
+      <option value="blue">Azul</option>
+      <option value="red">Rojo</option>
+    </select>
+
+    <label style="font-weight:900; font-size:12px; opacity:.9;">Tamaño de texto</label>
+    <select class="dockSelect" id="defaultTextSize">
+      <option value="xs">XS</option>
+      <option value="sm">S</option>
+      <option value="md" selected>M</option>
+      <option value="lg">L</option>
+      <option value="xl">XL</option>
+    </select>
+
+    <label style="font-weight:900; font-size:12px; opacity:.9;">Color del bloque</label>
+    <select class="dockSelect" id="defaultBlockBg">
+      <option value="none" selected>Sin fondo</option>
+      <option value="white">Blanco</option>
+      <option value="yellow">Amarillo</option>
+      <option value="blue">Azul</option>
+      <option value="red">Rojo</option>
+    </select>
+
+    <div style="font-size:12px; opacity:.8; line-height:1.35;">
+      Estos valores se aplican automáticamente a los nuevos bloques (Texto/Título/Imagen).
+    </div>
+  </div>
+
 </body>
 </html>
