--- a/espanel.html
+++ b/espanel.html
@@ -368,7 +368,9 @@
             .promoItem .btns { display:flex; gap:8px; flex-wrap:wrap; }
             @media (max-width: 760px){ #settingsModal .grid2, #settingsModal .grid3 { grid-template-columns: 1fr; } }
             #settingsModal, #settingsModal * { color:#fff; }
-    </style>
+    
+.brandLogo{ width:56px; height:56px; object-fit:contain; display:block; filter: drop-shadow(0 10px 20px rgba(0,0,0,0.25)); }
+</style>
   </head>
   <body>
     <div id="appHeader"></div>
