--- a/login.html
+++ b/login.html
@@ -23,7 +23,9 @@
     .quick-links{ margin-top: 14px; display:flex; gap: 10px; flex-wrap: wrap; }
     .reset-link{ margin-top: 10px; display:inline-flex; align-items:center; gap: 10px; border:none; background:transparent; color:#003893; font-weight:900; cursor:pointer; text-decoration: underline; padding: 0; }
     .reset-link:hover{ opacity:.9; }
-  </style>
+  
+.brandLogo{ width:56px; height:56px; object-fit:contain; display:block; filter: drop-shadow(0 10px 20px rgba(0,0,0,0.25)); }
+</style>
 </head>
 <body>
   <div id="appHeader"></div>
