--- a/Ebooks.html
+++ b/Ebooks.html
@@ -270,12 +270,8 @@
       color: #003893;
       border: 2px solid #FCD116;
     }
-  
-.brandLogo{ width:56px; height:56px; object-fit:contain; display:block; filter: drop-shadow(0 10px 20px rgba(0,0,0,0.25)); }
-</style>
-  <style>@view-transition { navigation: auto; }
-.brandLogo{ width:56px; height:56px; object-fit:contain; display:block; filter: drop-shadow(0 10px 20px rgba(0,0,0,0.25)); }
-</style>
+  </style>
+  <style>@view-transition { navigation: auto; }</style>
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
  </head>
  <body class="h-full font-body bg-blue-main text-white">
@@ -294,7 +290,7 @@
           <stop offset="100%" style="stop-color:#CE1126;stop-opacity:1" />
          </lineargradient>
         </defs> <path d="M 40,85 L 45,80 L 52,75 L 60,72 L 70,70 L 82,68 L 95,67 L 110,67 L 125,68 L 140,69 L 155,71 L 170,74 L 185,78 L 198,83 L 210,89 L 220,96 L 228,104 L 234,113 L 238,123 L 240,133 L 241,145 L 240,158 L 238,172 L 234,186 L 230,200 L 225,214 L 218,228 L 210,241 L 200,253 L 188,263 L 174,271 L 158,277 L 140,281 L 120,283 L 100,283 L 80,280 L 62,275 L 46,268 L 32,259 L 22,248 L 15,236 L 10,223 L 7,210 L 5,197 L 5,184 L 6,171 L 8,158 L 11,145 L 15,132 L 20,120 L 26,108 L 33,97 Z" fill="url(#colombiaFlag)" stroke="#FCD116" stroke-width="2.5" />
-       </svg><span class="font-display text-2xl font-bold text-white"></span>
+       </svg><span class="font-display text-2xl font-bold text-white">Aqui vivo</span>
       </div>
       <div class="hidden md:flex items-center gap-8"><a href="https://aquivivo.github.io/aquivivo/glowna.html" class="flex items-center gap-2 text-white hover:text-yellow-400 font-bold transition-colors group"> <span class="text-xl font-black">PL</span>
         <svg class="w-6 h-6 group-hover:scale-110 transition-transform" viewbox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><defs>
@@ -836,7 +832,7 @@
            <stop offset="100%" style="stop-color:#CE1126;stop-opacity:1" />
           </lineargradient>
          </defs> <path d="M 40,85 L 45,80 L 52,75 L 60,72 L 70,70 L 82,68 L 95,67 L 110,67 L 125,68 L 140,69 L 155,71 L 170,74 L 185,78 L 198,83 L 210,89 L 220,96 L 228,104 L 234,113 L 238,123 L 240,133 L 241,145 L 240,158 L 238,172 L 234,186 L 230,200 L 225,214 L 218,228 L 210,241 L 200,253 L 188,263 L 174,271 L 158,277 L 140,281 L 120,283 L 100,283 L 80,280 L 62,275 L 46,268 L 32,259 L 22,248 L 15,236 L 10,223 L 7,210 L 5,197 L 5,184 L 6,171 L 8,158 L 11,145 L 15,132 L 20,120 L 26,108 L 33,97 Z" fill="url(#colombiaFlagFooter)" stroke="#FCD116" stroke-width="2.5" />
-        </svg><span class="font-display text-xl font-black text-yellow-400"></span>
+        </svg><span class="font-display text-xl font-black text-yellow-400">Aqui vivo</span>
        </div>
        <p class="text-blue-200 text-sm leading-relaxed">Profesora de español y polaco en Let's Talk Poznań. Te ayudo a dejar de tener miedo a hablar 🌸🤍</p>
       </div>
