--- a/ejercicio.html
+++ b/ejercicio.html
@@ -64,9 +64,7 @@
         gap: 12px;
         min-width: 180px;
       }
-      
-      .brandLogo{ width:56px; height:56px; object-fit:contain; display:block; filter: drop-shadow(0 10px 20px rgba(0,0,0,0.25)); }
-.logo-flag {
+      .logo-flag {
         width: 42px;
         height: 42px;
         border-radius: 999px;
@@ -554,8 +552,8 @@
     <header class="nav-glass">
       <div class="nav-inner">
         <div class="brand">
-          <img src="logo.png" class="brandLogo" alt="AquiVivo">
-          
+          <div class="logo-flag" aria-hidden="true"></div>
+          <div class="name">Aqui vivo</div>
         </div>
 
         <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center">
