--- a/course.html
+++ b/course.html
@@ -464,11 +464,9 @@ body{
 </head>
 
 <body>
+  <div id="appHeader"></div>
 <div class="ui-scale-wrapper">
-  <div class="topActionBar" id="topActionBar">
-    <div class="topActionLeft"></div>
-
-    <div style="display:flex; gap:10px; align-items:center">
+  <div style="display:flex; gap:10px; align-items:center">
       <button class="btnNav" id="btnBack" type="button" onclick="window.location.href='ESPANEL.html'">⬅️ ATRÁS</button>
       <button class="btnNav" id="btnHome" type="button" onclick="window.location.href='index.html'">🏠 INICIO</button>
       <button class="btnLogout" id="btnLogout" type="button">Cerrar sesión</button>
@@ -1182,5 +1180,6 @@ body{
 </script>
 
 </div>
+  <script src="assets/js/layout.js"></script>
 </body>
 </html>
