--- a/lessonadmin.html
+++ b/lessonadmin.html
@@ -296,11 +296,7 @@
 <body>
   <div id="appHeader"></div>
 
-  <div class="nav-glass">
-    <div class="nav-inner">
-      <div class="brand">
-        <div class="logo-flag" aria-hidden="true"></div>
-        <div class="name">AquiVivo</div>
+  <div class="name">AquiVivo</div>
       </div>
       <div class="nav-actions">
         <button class="btn btn-yellow" id="btnPublish" type="button">🚀 Publicar</button>
@@ -1196,5 +1192,6 @@ btnSave.addEventListener("click", async ()=>{
     </div>
   </div>
 
+  <script src="assets/js/layout.js"></script>
 </body>
 </html>
