--- a/lessonpage.html
+++ b/lessonpage.html
@@ -211,11 +211,7 @@
 <body>
   <div id="appHeader"></div>
 
-  <div class="nav-glass">
-    <div class="nav-inner">
-      <div class="brand" aria-label="AquiVivo">
-        <div class="logo-flag" aria-hidden="true"></div>
-        <div class="name">AquiVivo</div>
+  <div class="name">AquiVivo</div>
       </div>
 
       <div class="nav-actions">
@@ -600,5 +596,6 @@
       }
     });
   </script>
+  <script src="assets/js/layout.js"></script>
 </body>
 </html>
